// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bbt-export-Fields in Extra should override defaults-sentencecase=on+guess+caseprotection=as-needed.biblatex 1`] = `
Object {
  "comments": Array [],
  "entries": Array [
    Object {
      "creators": Object {
        "author": Array [
          Object {
            "firstName": "Tom",
            "lastName": "Simonite",
          },
        ],
      },
      "fields": Object {
        "abstract": Array [
          "The community that built the largest encyclopedia in history is shrinking, even as more people and Internet services depend on it than ever. Can it be revived, or is this the end of the Web’s idealistic era?",
        ],
        "author": Array [
          "Simonite, Tom",
        ],
        "date": Array [
          "2013-10-22",
        ],
        "journaltitle": Array [
          "MIT Technology Review",
        ],
        "shorttitle": Array [
          "The decline of Wikipedia",
        ],
        "title": Array [
          "The decline of Wikipedia: Even as more people than ever rely on it, fewer people create it",
        ],
        "titleaddon": Array [
          "MIT Technology Review",
        ],
        "url": Array [
          "http://www.technologyreview.com/featuredstory/520446/the-decline-of-wikipedia/",
        ],
        "urldate": Array [
          "2013-10-26",
        ],
      },
      "key": "simonite2013declinewikipediaeven",
      "type": "online",
    },
  ],
  "errors": Array [],
  "groups": Object {
    "fileDirectory": null,
    "groups": Object {},
    "root": Array [],
    "version": null,
  },
  "preamble": Array [],
  "strings": Object {},
}
`;

exports[`export Fields in Extra should override defaults.biblatex 1`] = `
Object {
  "comments": Array [],
  "entries": Array [
    Object {
      "creators": Object {
        "author": Array [
          Object {
            "firstName": "Tom",
            "lastName": "Simonite",
          },
        ],
      },
      "fields": Object {
        "abstract": Array [
          "The community that built the largest encyclopedia in history is shrinking, even as more people and Internet services depend on it than ever. Can it be revived, or is this the end of the Web’s idealistic era?",
        ],
        "author": Array [
          "Simonite, Tom",
        ],
        "date": Array [
          "2013-10-22",
        ],
        "journaltitle": Array [
          "MIT Technology Review",
        ],
        "shorttitle": Array [
          "The decline of Wikipedia",
        ],
        "title": Array [
          "The decline of Wikipedia: Even as more people than ever rely on it, fewer people create it",
        ],
        "titleaddon": Array [
          "MIT Technology Review",
        ],
        "url": Array [
          "http://www.technologyreview.com/featuredstory/520446/the-decline-of-wikipedia/",
        ],
        "urldate": Array [
          "2013-10-26",
        ],
      },
      "key": "simonite2013declinewikipediaeven",
      "type": "online",
    },
  ],
  "errors": Array [],
  "preamble": Array [],
  "strings": Object {},
}
`;
